# Fastapi-boilerplate

./: README.md  main.py  pyproject.toml
src/app/: db.py  exception.py  server.py
src/config/: config.py  error.py  globals.py
src/controllers/: user.py
src/middlewares/: client.py
src/models/: user.py
src/routes/: index.py  user.py
src/utils/: breeth.py  commonFunctions.py  model_utils.py  validation_utils.py
src/validations/: userValidation.py
